fix overflow

--- a/src/styles/_me.css
+++ b/src/styles/_me.css
@@ -40,7 +40,7 @@ text-align: center;
 }
 
 .ysi{
-  font-style: italic;
+  /* font-style: italic; */
   font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0 6px;
 }
